# UniversalStacktrace

./: CMakeLists.txt
.github/workflows/: ci.yaml  linux_ci.yaml  mac_ci.yaml
test/: BasicTest.cpp  Main.cpp
ust/: ust.hpp
